[package]
name = "rocket-power"
version = "0.1.0"
authors = ["Andrew Hayford <emailandrewhayford@gmail.com>"]

[dependencies]
rocket = "0.3.12"
rocket_codegen = "0.3.12"
rocket_contrib = { version = "0.3.12", features = ["json"] }

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.2.0", features = ["mysql", "r2d2", "chrono"] }
diesel_codegen = { version = "0.16.0" }
chrono = { version = "^0.4.0", features = ["serde"] }